fix blog image/list overlap

--- a/ccatheme.scss
+++ b/ccatheme.scss
@@ -1213,7 +1213,7 @@ iframe#googledocs {
 .node-type-blog .node-inner .content img {
   float: left;
   display: inline;
-  margin: 0 10px 5px 5px;
+  margin: 0 20px 5px 5px;
   border: 1px solid $lightGray;
   padding: 3px;
 }
